# doc-metadata-extract

./: .env_example  .gitignore  Pipfile  README.md  requirements.txt  setup.cfg
doc_extract/: api.py  document.py  extractions.py  main.py  report.py  utils.py
doc_extract/templates/: index ORIGINAL.html  index.html  sfc.html  table_orig.html  test.html  test_sfc 4.html  upload.html
tests/: test_document.py  test_extractions.py  test_main.py  test_report.py
tests/RESULT/: index_out_v1.html  index_out_v2.html
tests/data/: Research Articles in Simplified HTML with CSS.html  example.csv  example.xlsx  index_out.html
tests/demo_RESULT/: index.html
tests/html/: index_out.html
