[metadata]
name = document_extract
version = 0.1.0
author_email = information@mgmt-tech.org
url = https://github.com/IMTorgOpenDataTools/doc-metadata-extract
description = Extract the metadata from a directory of files.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires = 
    nose
    python-dotenv
    build
    logzero
    pytest
    pandas
    spacy
    beautifulsoup4
    jinja2
    openpyxl
    python-docx
    pypdf
    pdfminer
    pdftitle
    "pdfminer.six"
    pymupdf
    xhtml2pdf

[options.package_data]
* = .env

[options.entry_points]
console_scripts = 
    sample = sample.core:main